# fatum

./: .gitignore  CMakeLists.txt  README.md
include/fatum/: debug.h  event.h  gl_tweaks.h  input.h  manager.h  math.h  resources.h  scene.h  scene_manager.h  window.h
include/fatum/drawable/: button.h  object.h  rectangle.h  triangle.h
include/fatum/glt/: color.h  shader.h  shaderprogram.h  vertex.h
resources/shader/: defaultfr.glsl  defaultvs.glsl
src/: debug.cpp  gl_tweaks.cpp  resources.cpp  scene.cpp  scene_manager.cpp  window.cpp
